--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "jquery": "^3.6.0",
+    "net": "^1.0.2",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3",
+    "tls": "^0.0.1",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,4 +48,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
