--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "net": "^1.0.2",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
